# virtual_keyboard

./: .clang-format  CMakeLists.txt
include/: custom_line_edit.h  mainwindow.h
src/: custom_line_edit.cpp  mainwindow.cpp
